--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: url(background.jpg) no-repeat center center fixed;
+    background: url(./images/background.jpg) no-repeat center center fixed;
     background-size: cover;
     min-height: 100vh;
     margin: 0;
